console up and running

--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animejs": "^2.2.0",
     "react": "^16.5.1",
+    "react-anime": "^2.2.0",
     "react-dom": "^16.5.1",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "react-typing-animation": "^1.4.0",
+    "semantic-ui-react": "^0.82.5"
   },
   "scripts": {
     "start": "react-scripts start",
