deploying on new domain

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "profile",
-  "homepage": "http://knthslai.github.io/profile",
+  "homepage": "http://kennethlai.co",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
